NLP TP/texts/robotics/robotics.stackexchange_0000070556.txt
Q:

Setting up Catkin Baxter Environment Error - INDIGO

Ubuntu 14.04.2 LTE
I'm trying to setup a workspace to simulate Baxter in gazebo with Ros Indigo. When I run catkin_make in my workspace i get the following error:
[100%] Building CXX object baxter_simulator/baxter_sim_hardware/CMakeFiles/baxter_emulator.dir/src/baxter_emulator.cpp.o

...
...
[100%] Building CXX object baxter_simulator/baxter_sim_hardware/CMakeFiles/baxter_emulator.dir/src/baxter_emulator.cpp.o
Built target kinematics
/home/veyorokon/ros/baxter_ws/src/baxter_simulator/baxter_sim_hardware/src/baxter_emulator.cpp: In member function ‘void baxter_en::baxter_emulator::publish(const string&)’:
/home/veyorokon/ros/baxter_ws/src/baxter_simulator/baxter_sim_hardware/src/baxter_emulator.cpp:284:21: error: ‘imread’ is not a member of ‘cv’
     cv_ptr->image = cv::imread(img_path, CV_LOAD_IMAGE_UNCHANGED);
                     ^
make[2]: *** [baxter_simulator/baxter_sim_hardware/CMakeFiles/baxter_emulator.dir/src/baxter_emulator.cpp.o] Error 1
make[1]: *** [baxter_simulator/baxter_sim_hardware/CMakeFiles/baxter_emulator.dir/all] Error 2
make: *** [all] Error 2
Invoking "make -j4 -l4" failed

This error has been haunting me for the past three days...

Originally posted by veyorokon on ROS Answers with karma: 3 on 2015-11-23
Post score: 0

A:

I'm fairly certain that your error is related to catkin finding the wrong version of OpenCV. Do you by any chance have ros-indigo-opencv3 installed? You can check with dpkg -l |grep ros-indigo-opencv3. If it is installed, try removing with sudo apt-get remove ros-indigo-opencv3. If it is not installed, have you built OpenCV 3 from source? Or completed some other procedure to install it?

Originally posted by jarvisschultz with karma: 9031 on 2015-11-24
This answer was ACCEPTED on the original site
Post score: 1

